--- a/UmbracoBlogSite/UmbracoBlogSite.csproj
+++ b/UmbracoBlogSite/UmbracoBlogSite.csproj
@@ -289,6 +289,13 @@
     <Content Include="config\BackOfficeTours\getting-started.json" />
     <Content Include="config\applications.config" />
     <Content Include="config\404handlers.config" />
+    <Content Include="css\animate.css" />
+    <Content Include="css\bootstrap.css" />
+    <Content Include="css\icomoon.css" />
+    <Content Include="css\index.html" />
+    <Content Include="css\simple-line-icons.css" />
+    <Content Include="css\style.css" />
+    <Content Include="css\StylesDropdowon.css" />
     <Content Include="fonts\.DS_Store" />
     <Content Include="fonts\bootstrap\glyphicons-halflings-regular.eot" />
     <Content Include="fonts\bootstrap\glyphicons-halflings-regular.ttf" />
@@ -306,7 +313,23 @@
     <Content Include="fonts\simple-line-icons\Simple-Line-Icons.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="css\bootstrap.css.map" />
+    <Content Include="css\style.css.map" />
     <None Include="packages.config" />
+    <Content Include="images\image_1.jpg" />
+    <Content Include="images\image_10.jpg" />
+    <Content Include="images\image_2.jpg" />
+    <Content Include="images\image_3.jpg" />
+    <Content Include="images\image_4.jpg" />
+    <Content Include="images\image_5.jpg" />
+    <Content Include="images\image_6.jpg" />
+    <Content Include="images\image_7.jpg" />
+    <Content Include="images\image_8.jpg" />
+    <Content Include="images\image_9.jpg" />
+    <Content Include="images\image_about.jpg" />
+    <Content Include="images\index.html" />
+    <Content Include="images\loader.gif" />
+    <Content Include="images\loc.png" />
     <Content Include="Media\1001\image_2.jpg" />
     <Content Include="Media\1001\image_6.jpg" />
     <Content Include="Media\1002\image_2.jpg" />
@@ -338,6 +361,7 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\BlogPost.cshtml" />
     <Content Include="Views\Partials\Blog\_BlogList.cshtml" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
