--- a/UmbracoBlogSite/UmbracoBlogSite.csproj
+++ b/UmbracoBlogSite/UmbracoBlogSite.csproj
@@ -347,6 +347,9 @@
     <Content Include="Media\1008\image_9.jpg" />
     <Content Include="Media\1009\semere_sketch_color.jpg" />
     <Content Include="Media\1010\peace-agreementjpeg.jpeg" />
+    <Content Include="Media\1011\val2018.jpeg" />
+    <Content Include="Media\1012\zelambesa.png" />
+    <Content Include="Media\1013\lidingoloppet_2018_v2.png" />
     <Content Include="Media\semere circle.png" />
     <Content Include="Media\Semere_Circle.jpg" />
     <Content Include="Media\Semere_sketch_color.jpg" />
